<?xml version="1.0"?>
<package format="3">
  <name>pt_pkg</name>
  <version>0.0.1</version>
  <description>
    Patrol robot navigation package using A* global planner and Pure Pursuit local planner.
  </description>

  <maintainer email="chan@example.com">chan</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build dependencies -->
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <!-- Execution dependencies -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>yaml-cpp</exec_depend>

  <!-- Export build type -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>